ONSstyle.scss
/*-- scss:defaults --*/

// fonts
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

// font family
$font-family-sans-serif: 'Open Sans', Arial, sans-serif !default;
$headings-font-weight:        300 !default;

// font size
$presentation-h1-font-size: 2.6em;
$presentation-h2-font-size: 1.7em;
$presentation-h3-font-size: 1.4em;
$presentation-h4-font-size: 1.1em;
$presentation-font-size-root: 36px;
$presentation-line-height: 1.5em;

// colour variables
$ons-night-blue: #003c57;
$ons-spring-green: #a8bd3a;
$ons-aqua-teal: #00a3a6;
$ons-ocean-blue: #206095;
$ons-sky-blue: #27a0cc;
$ons-night-blue70: #4d7789;
$ons-night-blue40: #99b1bd;
$ons-night-blue10: #e6ecee;

$ons-black: #222222;
$ons-grey100: #414042;
$ons-grey75: #707071;
$ons-grey35: #bcbcbd;
$ons-grey15: #e2e2e3;
$ons-grey5: #f5f5f6;
$ons-white: #ffffff;

// font colour
$presentation-heading-color: $ons-night-blue !default;

// code
$code-color: $ons-ocean-blue !default;
$code-block-font-size: 0.7em;
$code-block-border-color: $ons-black;
$code-block-bg: $ons-night-blue10;

// bg colours
$body-color: $ons-black;
$link-color: $ons-ocean-blue;
$body-bg: #ffffff;

// account for fixed headers
body {
  // padding-top: calc(var(--ons-header-height) + 60px);
  padding-top: 0
}


#quarto-content {
  padding-top: 172px;
}

// // nav
// $navbar-bg: var(--ons-color-header);
// $navbar-hl: $ons-night-blue10;

#quarto-header {
  display: none;
}

// #quarto-header .navbar {
//   background-color: var(--ons-color-header);
// }


// #quarto-header .navbar .navbar-title {
//   color: var(--ons-color-text-inverse);
//   font-weight: 700;
// }


// #quarto-header .navbar .nav-link {
//   color: var(--ons-color-text-inverse);
// }


// #quarto-header .navbar .nav-link.active {
//   font-weight: 700;
// }


.page-navbar #quarto-document-content {
  padding-top: 3.5rem;
}


/*-- scss:rules --*/


.subtitle {
  font-size: $presentation-h3-font-size;
  font-family: $font-family-sans-serif;
}

.title, .subtitle, .quarto-title-author-name, .date {
  text-align: left;
  padding-left: 0px;
}

a {
    color:$ons-ocean-blue;
}


.navbar-nav .nav-link.show {
  color: $ons-night-blue10
}

.quarto-title-authors, .quarto-title-author {
  justify-content: left !important;
  padding-left: 0px !important;
}

h1 {
  max-width: 50% !important;
  text-align: left !important;
}

h2 {
  padding-bottom: 35px;
}

.about-entity .about-link {
  padding: 0.25em 0.25em !important;
  border: none !important; 
  justify-content: flex-end !important;
  column-gap: 0em !important;
  font-size: 1.2em !important;
}

.entity-contents {
  text-align: right !important;
  padding: 0 3em 0 1em;
}

.about-entity h1 {
  text-align: right !important;
  max-width: 100% !important;
}

.about-entity .subtitle {
  text-align: right !important;
}

.about-entity .about-links {
  text-align: right !important;
}

.about-entity {
  align-items: center !important;
}

.about-contents {
   padding: 0 0 0 2em !important;
}


@media (max-width: 991.98px) {

  .entity-contents {
    order: 2 !important;
    margin: -1em 0 0 0 !important;
    padding: 0 0 0 0em !important;
    text-align: center !important;
  }

  .about-entity h1 {
    margin-left: auto !important;
    margin-right: auto !important;
    text-align: center !important;
    flex-direction: column !important;
    align-items: center !important;
  }

  .about-entity .subtitle {
    text-align: center !important;
  }

  .about-entity .about-links {
    justify-content: center !important;
  }

  .about-image {
      order: 1 !important;
      padding: 2em 2em 2em 2em !important;
    }
}


main#quarto-document-content {
  position: static !important;
  overflow: visible !important;
}

.ons-header {
  position: fixed !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  width: 100% !important;
  z-index: 1031 !important;
}

// #quarto-header {
//   position: fixed !important;
//   top: var(--ons-header-height) !important;
//   left: 0 !important;
//   right: 0 !important;
//   z-index: 1030;
// }


.ons-header {
  width: 100%;
}

.ons-header .ons-container {
  max-width: none;
  margin: 0;
  padding: 0 1rem;
}

.author {
  color: $body-bg;
  font-size: $presentation-h4-font-size;
  font-family: $font-family-sans-serif;
}

.author a {
  color: $body-bg;
  font-size: $presentation-h4-font-size;
  font-family: $font-family-sans-serif;
}

section.has-dark-background a, section.has-dark-background a:hover {
  color: $body-bg;
}

section.has-light-background a, section.has-light-background a:hover {
  color: $link-color !important;
}

.right {
  text-align: right !important;
}

.center {
  text-align: center !important;
}

.small {
 font-size: 30px;
}

.big {
  font-weight: bold;
  font-size: 2.4em;
}


// Cards 

.card {
    background-color:$ons-grey5;
  }

.ons-card__title {
    margin-bottom: 0;
}

.card-title {
  font-weight: $headings-font-weight;
  font-size: 150%;
}
.card-subtitle {
  color: $ons-black;
  font-size: 100%;
  margin-bottom: 1.3rem;
  // margin-top: 1.3rem;
  // text-decoration: none !important;
}

.card-text { 
  font-size:75%;
  font-weight: 100;
  }
  
.ons-card h2,
.ons-card h3 {
  border-bottom: none;
  padding-bottom: 0;
  margin-bottom: 0.5rem;
}
  
.card-img-top {
  height: 200px;    
  object-fit: cover;   
  width: 100%;
}
.card-subtitle-index {
  font-weight: $headings-font-weight;
  font-size: 80%;
  margin-bottom: 1.3rem;
}
.card-text-index { 
  font-size:75%;
  font-weight: 100;
  }
  
.ons-card__link {
  text-decoration: none;
}

.ons-card__link .ons-card__title {
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 0px;
}

.ons-card__link:hover .ons-card__title {
  text-decoration-thickness: 3px;
}

.ons-card__link .card-subtitle {
  text-decoration: none;
}

  #footer {
    position: fixed;
    height:60px;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: var(--ons-color-banner-bg);
    color: var(--ons-color-text);
    text-align: center;
    font-size: 100%;
    padding: 16px 10px 10px 10px;
    z-index: 1040;
  }
  #footer a {
    color: var(--ons-color-text-banner-link);
    text-decoration: underline;
  }

  
:root {
  --ons-header-height: 179px;
}

/* Offset content for fixed ONS header */
main#quarto-document-content {
  padding-top: calc(var(--ons-header-height) + 20px);
}

.home main#quarto-document-content {
  padding-top: calc(var(--ons-header-height) - 30px);
}

.ons-footer {
  width: 100%;
  margin-left: 0;
  margin-right: 0;
}

.page-layout-full .ons-footer .ons-container {
  max-width: none;
  padding-left: 2rem;
  padding-right: 2rem;
}

